--- a/.github/workflows/status-checks.yaml
+++ b/.github/workflows/status-checks.yaml
@@ -5,3 +5,7 @@ on: pull_request
 jobs:
   all:
     uses: SituDevelopment/.github/.github/workflows/all.yaml@main
+
+  typescript:
+    uses: SituDevelopment/.github/.github/workflows/typescript.yaml@main
+    secrets: inherit
