--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
     },
     "dependencies": {
-        "@payloadcms/db-vercel-postgres": "^3.20.0",
+        "@payloadcms/db-mongodb": "^3.20.0",
         "@payloadcms/next": "latest",
         "@payloadcms/payload-cloud": "latest",
         "@payloadcms/richtext-lexical": "latest",
