--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "class-variance-authority": "^0.7.1",
         "cross-env": "^7.0.3",
+        "date-fns": "^4.1.0",
         "graphql": "^16.8.1",
         "lucide-react": "^0.475.0",
         "motion": "^12.4.7",
@@ -49,12 +50,12 @@
         "react-dom": "19.0.0",
         "react-hook-form": "^7.54.2",
         "sharp": "^0.33.5",
+        "swiper": "^11.2.6",
         "tailwind-merge": "^3.0.2",
         "tailwindcss": "^4.0.8"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
-        "@tailwindcss/typography": "^0.5.16",
         "@types/node": "^22.5.4",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
