--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
         "typescript": "5.7.3"
     },
     "engines": {
-        "node": "^18.20.2 || >=20.9.0"
+        "node": "^20.9.0"
     },
     "pnpm": {
         "onlyBuiltDependencies": [
